--- a/chsie-popups/admin/app/src/components/app/styling/_css/PositionPicker.css
+++ b/chsie-popups/admin/app/src/components/app/styling/_css/PositionPicker.css
@@ -1,7 +1,8 @@
 .PositionPicker {
     display: inline-block;
     width: auto;
-    margin-left: 44px;
+    margin-left: 78px;
+    margin-top: 13px;
 }
 
 .PositionPicker .field-container {
