--- a/chsie-popups/admin/app/src/components/app/rules/logic/_css/LogicSection.css
+++ b/chsie-popups/admin/app/src/components/app/rules/logic/_css/LogicSection.css
@@ -2,6 +2,11 @@
   display: flex;
   align-items: stretch;
   border: 3px solid white;
+  border-bottom: 0;
+}
+
+.LogicSection:last-of-type {
+  border-bottom: 3px solid white;
 }
 
 .LogicSection .rotated {
