--- a/chsie-popups/public/forms-ajax/scss/forms-ajax.scss
+++ b/chsie-popups/public/forms-ajax/scss/forms-ajax.scss
@@ -1,81 +1,79 @@
 /**
- * SCSS for: public/forms-ajax/.
- *
- * Separate Sass files for each view.
- * Break up Sass by view component if it's complex.
- *
- */
-
-
+* SCSS for: public/forms-ajax/.
+*
+* Separate Sass files for each view.
+* Break up Sass by view component if it's complex.
+*
+*/
 
 #chsie-popups-close-button {
   position: absolute;
   top: -12px;
   right: -12px;
   display: block;
-  width: 28px;
-  height: 28px;
+  width: 24px;
+  height: 24px;
   background-color: white;
   border-radius: 50%;
   transition: 0.1s all ease-in-out;
 
   &::before {
     position: absolute;
-    top: 1px;
-    left: -2px;
+    top: -1px;
+    left: -5px;
     font-family: ETModules;
     font-size: 32px;
     content: "\e051";
     color: #85754d;
     border-radius: 50%;
     transition: 0.1s all ease-in-out;
-   }
+  }
 
- &:hover, &:focus {
-   background-color: #444444;
+  &:hover, &:focus {
+    background-color: #444444;
 
-   &::before {
-     color: #d7d7d7;
-   }
- }
+    &::before {
+      color: #c7c7c7;
+    }
+  }
 
- }
+}
 
- #chsie-popups-no-show {
-   position: relative;
-   bottom: 0;
-   background-color: #444444;
-   color: white;
-   text-align: center;
-   padding: 5px;
-   margin-top: 26px;
+#chsie-popups-no-show {
+  position: relative;
+  bottom: 0;
+  background-color: #444444;
+  color: white;
+  text-align: center;
+  padding: 5px;
+  margin-top: 26px;
 
-   label {
-     font-size: 13px;
-     font-weight: 600;
+  label {
+    font-size: 13px;
+    font-weight: 600;
 
-     &:hover input ~ .checkmark {
-       background-color: #d7d7d7;
-     }
-   }
+    &:hover input ~ .checkmark {
+      background-color: #d7d7d7;
+    }
+  }
 
-   input {
-     position: absolute;
-     opacity: 0;
-     cursor: pointer;
-     height: 0;
-     width: 0;
+  input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 
-     &:checked ~ .checkmark {
+    &:checked ~ .checkmark {
 
-       &::after {
-          display: block;
-       }
-     }
+      &::after {
+        display: block;
+      }
+    }
 
   }
 
-   .checkmark {
+  .checkmark {
     position: relative;
     top: 5px;
     left: 8px;
@@ -103,4 +101,4 @@
 
 
 
- }
+}
