--- a/chsie-popups/public/forms/scss/form-options.scss
+++ b/chsie-popups/public/forms/scss/form-options.scss
@@ -6,21 +6,32 @@
  *
  */
 
+#heightTracker {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .chsie-popups-form {
   position: fixed !important;
   z-index: 99999;
   padding: 20px;
+  width: 50%;
+
+  @media all and ( max-width: 980px ) {
+    width: 90%;
+  }
+  // max-height: 90%; // Handled by JS now.
+
 
   &.chsie-popups-position-top {
-    top: 20px;
-    width: 50%;
+    top: 40px;
     left: 50%;
     transform: translateX(-50%);
   }
 
   &.chsie-popups-position-bottom {
     bottom: 0;
-    width: 50%;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -29,21 +40,18 @@
     left: 20px;
     top: 50%;
     transform: translateY( -50% );
-    width: 50%;
   }
 
   &.chsie-popups-position-right {
     right: 20px;
     top: 50%;
     transform: translateY( -50% );
-    width: 50%;
   }
 
   &.chsie-popups-position-center {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
   }
 
   .chsie-popups-title {
@@ -59,6 +67,19 @@
 
 
   // Form styling:
+  form {
+    opacity: 0; // To start.
+    transition: 0.15s all ease-in-out;
+  }
+
+  .frm_form_fields {
+    overflow-y: scroll;
+    height: 100%;
+    padding: 0 20px 20px;
+    border: 1px solid #d7d7d7;
+  }
+
+
   .frm_form_field {
     margin-top: 13px;
   }
